Fixed alignment issue
Fixed the alignment issue for the thing in two weeks.

--- a/client/lab_5/styles.css
+++ b/client/lab_5/styles.css
@@ -3,6 +3,9 @@
   padding: 0;
   box-sizing: border-box;
 }
+html{
+  height: 100%;
+}
 
 body {
   margin: 0;
@@ -10,6 +13,7 @@ body {
   font-family: ‘Segoe UI’, Candara, ‘Bitstream Vera Sans’, ‘DejaVu Sans’,
     ‘Bitsream Vera Sans’, ‘Trebuchet MS’, Verdana, ‘Verdana Ref’, sans-serif;
   background-color: darkslategray;
+  min-height: 100%;
 }
 
 
@@ -17,6 +21,8 @@ body {
 .columns {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
 }
 
 .wrapper {
@@ -85,7 +91,7 @@ body {
   background-color: white;
   align-items: center;
   justify-content: center;
-  padding: 5px;
+  padding: 20px;
   border-radius: 5px;
 }
 .form-row button {
